fix: article pages for all self help articles
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/selfhelp/mindfulpause/page1.html
+++ b/articleAssets/selfhelp/mindfulpause/page1.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
     <img style="width: 50%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/selfhelp.png">
 
-    <p>In the hustle and bustle, it's easy to get caught up in the whirlwind of responsibilities, tasks and endless to-do lists. We may then neglect other important aspects such as family, friends and our own needs. While battling these demands, it is crucial to remember the transformative impact of strategic pauses to re-engage with our present moment so as to reduce stress, enhance productivity and improves our well-being! ​</p>
+    <p>In the hustle and bustle, it's easy to get caught up in the whirlwind of responsibilities, tasks, and endless to-do lists. We may then neglect other important aspects such as family, friends, and our own needs. While battling these demands, it is crucial to remember the transformative impact of strategic pauses to re-engage with our present moment to reduce stress, enhance productivity, and improve our well-being!​</p>
   </div>
 </body> 
 </html>
