--- a/articleAssets/selfhelp/mindfulpause/page11.html
+++ b/articleAssets/selfhelp/mindfulpause/page11.html
@@ -35,7 +35,7 @@
 
     <p style="text-align: center;">Try creating your own Mindful Pause list.</p>
 
-    <p style="text-align: center;">Make it fun by turning it into a dart board or a spin wheel to select which mindful activity to embark for today!</p>
+    <p style="text-align: center;">Make it fun by turning it into a dart board or a spin wheel to select which mindful activity to embark on today!</p>
   </div>
 </body>
 </html>
