--- a/articleAssets/selfhelp/mindfulpause/page2.html
+++ b/articleAssets/selfhelp/mindfulpause/page2.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
     <h1 style="align-self: center"><b>WHAT IS IT?</b></h2>
 
-    <p>Mindful pauses are brief, intentional and conscious moments where we step back from the rush to reconnect with ourselves and our surroundings. They're like small pockets of calm amidst the chaos, allowing us to ground ourselves in the present moment. </p>  
+    <p>Mindful pauses are brief, intentional, and conscious moments where we step back from the rush to reconnect with ourselves and our surroundings. They're like small pockets of calm amidst the chaos, allowing us to ground ourselves in the present moment.</p>  
   
     <div style="display: flex; flex: 1; justify-content: center;">
       <img style="width: 80%; object-fit: contain;" src="../../assets/articleAssets/selfhelp/mindfulpause/page2-image1.png">
