--- a/articleAssets/selfhelp/mindfulpause/page3.html
+++ b/articleAssets/selfhelp/mindfulpause/page3.html
@@ -36,7 +36,7 @@
 
     <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/mindfulpause/page3-image1.png">
 
-    <b>Stress Reduction:</b> Taking mindful pauses can help alleviate stress and anxiety, allowing us to re-evaluate where we are in our pursue and approach challenges with a clearer mind</p>
+    <b>Stress Reduction:</b> Taking mindful pauses can help alleviate stress and anxiety, allowing us to re-evaluate where we are in our pursuit and approach challenges with a clearer mind.</p>
 
     <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/mindfulpause/page3-image2.png">
 
