--- a/articleAssets/selfhelp/mindfulpause/page4.html
+++ b/articleAssets/selfhelp/mindfulpause/page4.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
     <img height="auto" style="width: 30%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/mindfulpause/page4-image1.png">
 
-    <b>Enhanced Well-being:</b> By giving ourselves chance to pause and breathe, we allow mental, emotional, and physical recovery to take place. </p>
+    <b>Enhanced Well-being:</b> By giving ourselves a chance to pause and breathe, we allow mental, emotional, and physical recovery to take place. </p>
   </div>
 </body>
 </html>
