--- a/articleAssets/selfhelp/mindfulpause/page5.html
+++ b/articleAssets/selfhelp/mindfulpause/page5.html
@@ -34,7 +34,7 @@
 		<h1 style="align-self: center"><b>HOW TO APPLY IT</b></h1>  
 
   	<p>
-			One of the easiest mindful pauses is moderating our breathing. When we are stressed, our nervous system acts up to activate the fight-flight response. Our breathing quickens to take in more air to fuel our body into action. However, long engagement in such tense mode wears down our body akin like an over-drive engine. Slowing our breathing pace sends signal to our body that all is ok, in turn help us calm down.
+			One of the easiest mindful pauses is moderating our breathing. When we are stressed, our nervous system acts up to activate the fight-flight response. Our breathing quickens to take in more air to fuel our body into action. However, long engagement in such tense mode wears down our body akin to an over-drive engine. Slowing our breathing pace sends a signal to our body that all is ok, in turn, help us calm down.	
 		</p>
 
 		<p>
