--- a/articleAssets/selfhelp/mindfulpause/page8.html
+++ b/articleAssets/selfhelp/mindfulpause/page8.html
@@ -36,7 +36,7 @@
     <h1 style="text-align: center; margin-bottom: -10px;"><b>Set Reminders to be Consistent</b></h1>
 
     <p style="text-align: center;">
-			With so many priorities in life, it's easy to de-prioritise breaks. Set gentle reminders to regularly prompt yourself to take pauses. Schedule routine self-care time to unwind from the busyness of your work. The more you practise and engage in mindful pauses, the easier it is to activate it in times of need to hep us gain back control of our stress.
+			With so many priorities in life, it's easy to de-prioritise breaks. Set gentle reminders to regularly prompt yourself to take pauses. Schedule routine self-care time to unwind from the busyness of your work. The more you practise and engage in mindful pauses, the easier it is to activate it in times of need to help us gain back control of our stress.
 		</p>
   </div>
 </body>
