--- a/articleAssets/selfhelp/selfcare/page2.html
+++ b/articleAssets/selfhelp/selfcare/page2.html
@@ -34,7 +34,7 @@
     <h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 
     <p>
-      Self-care is the practice of taking intentional actions to maintain and can improve your physical, mental, and emotional health, as indicated by studies. By effectively managing everyday stress, self-care promotes greater balance, resilience and a fulfilling life. It’s about prioritizing your health and happiness to prevent burnout.
+      Self-care is the practice of taking intentional actions to maintain and improve your physical, mental, and emotional health, as indicated by studies. By effectively managing everyday stress, self-care promotes greater balance, resilience and a fulfilling life. It’s about prioritising your health and happiness to prevent burnout.
     </p>
 
     <p>
