--- a/articleAssets/selfhelp/selfcare/page3.html
+++ b/articleAssets/selfhelp/selfcare/page3.html
@@ -35,7 +35,7 @@
 
     <p style="text-align: center; margin: 0;">
       Excessive workload<br>
-      Little control/autonomy in role<br>
+      Little control/autonomy in the role<br>
       Failure to maintain boundaries with others<br>
       Poor self-care
     </p>
