--- a/articleAssets/selfhelp/selfcare/page6.html
+++ b/articleAssets/selfhelp/selfcare/page6.html
@@ -34,7 +34,7 @@
     <h1 style="text-align: center;"><b>HOW TO APPLY IT?</b></h1>
 
     <p>
-      Every individual is unique, so we all have different combination of activities or interests that may help us destress. It can also change when your life phases changes. However, it is important to incorporate only healthy activities. Essentially, there is no one way of practicing self-care.
+      Every individual is unique, so we all have different combinations of activities or interests that may help us destress. It can also change when your life phases change. However, it is important to incorporate only healthy activities. Essentially, there is no one way of practicing self-care.
     </p>
 
     <p>
