--- a/articleAssets/selfhelp/sleepqualitychecklist/page3.html
+++ b/articleAssets/selfhelp/sleepqualitychecklist/page3.html
@@ -51,7 +51,7 @@
 
 			<div style="display: flex; flex-direction: row; gap: 15px">
 				<input type="checkbox" id="form3id4" name="form3id4" value="form3id4value">
-				<label for="form3id4">You find it hard to calm yourself prior to sleep despite engaging in relaxing activities</label>
+				<label for="form3id4">You find it hard to calm yourself before sleep despite engaging in relaxing activities</label>
 			</div>
 
 			<div style="display: flex; flex-direction: row; gap: 15px">
@@ -67,7 +67,7 @@
 		<form style="display: flex; flex-direction: column; gap: 16px" action="/">
 			<div style="display: flex; flex-direction: row; gap: 15px">
 				<input type="checkbox" id="form4id1" name="form4id1" value="form4id1value">
-				<label for="form4id1">You have been diagnosed with sleep disorder e.g., sleep apnea</label>
+				<label for="form4id1">You have been diagnosed with a sleep disorder e.g., sleep apnea</label>
 			</div>
 
 			<div style="display: flex; flex-direction: row; gap: 15px">
