--- a/articleAssets/selfhelp/theartoftaskprioritisation/page2.html
+++ b/articleAssets/selfhelp/theartoftaskprioritisation/page2.html
@@ -34,7 +34,7 @@
 		<h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 	
   	<p>
-			Have you ever wished you had more time to finish your tasks? Or felt like there are too many things to juggle, unsure of where to even start? Maybe everything feels like a chaotic mess and it is affecting your work/ personal life. If you’ve felt like this, you’re not alone!
+			Have you ever wished you had more time to finish your tasks? Or did you feel like there are too many things to juggle, unsure of where to even start? Maybe everything feels chaotic and affects your work/ personal life. If you’ve felt like this, you’re not alone!
 		</p>
 
 		<p>
