--- a/articleAssets/selfhelp/theartoftaskprioritisation/page4.html
+++ b/articleAssets/selfhelp/theartoftaskprioritisation/page4.html
@@ -36,7 +36,7 @@
 		</p>
 
 		<p>
-			One method is the use of Eisenhower Matrix, which looks at the importance and urgency perceived for each task.
+			One method is the use of the Eisenhower Matrix, which looks at the importance and urgency perceived for each task.
 		</p>
 
 		<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/theartoftaskprioritisation/page4-image1.png">
