--- a/articleAssets/selfhelp/understandingsleep/page11.html
+++ b/articleAssets/selfhelp/understandingsleep/page11.html
@@ -38,7 +38,7 @@
 		<p>
 			<a style="color: green; font-weight: bold" >Third</a>, stick to the set sleep schedule continuously so your body can be conditioned to the right cues for sleep. It is normal if you find it hard to engage with sleep hygiene practices initially, as your body takes time to adjust, so keep it going.
 			<br><br>
-			Nonetheless if you have tried the above for a period and still find it ineffective, it is time to consult a doctor, especially if you suspect that it could be linked to an underlying medical/mental health condition.
+			Nonetheless, if you have tried the above for a period and still find it ineffective, it is time to consult a doctor, especially if you suspect that it could be linked to an underlying medical/mental health condition.
 			<br><br>
 			<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/understandingsleep/page11-image1.png">
 		</p>
