--- a/articleAssets/selfhelp/understandingsleep/page3.html
+++ b/articleAssets/selfhelp/understandingsleep/page3.html
@@ -31,7 +31,7 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: center; padding-left: 5%; padding-right: 5%;">
-    <p>As we sleep, our body temperature drops, brain activity, heart rate and respiration slow down so our vital body function can rejuvenate.  Over the course of sleep, our body will complete as many sleep cycles as needed so we would wake up:</p>
+    <p>As we sleep, our body temperature drops, brain activity, heart rate and respiration slow down so our vital body function can rejuvenate. Throughout sleep, our body will complete as many sleep cycles as needed so we can wake up:</p>
 	  
     <br><br>
 
