--- a/articleAssets/selfhelp/understandingsleep/page4.html
+++ b/articleAssets/selfhelp/understandingsleep/page4.html
@@ -34,7 +34,7 @@
 		<img style="width: 100%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/understandingsleep/page4-image1.png">
 
 		<p>
-			<b>How do our body regulate sleep?</b>
+			<b>How does our body regulate sleep?</b>
 			<br>
 			Our body depends on the two factors below to drive our sleep process naturally.
 		</p>
