--- a/articleAssets/selfhelp/understandingsleep/page7.html
+++ b/articleAssets/selfhelp/understandingsleep/page7.html
@@ -36,13 +36,13 @@
 		<p>
 			<b>Stage 1</b> [1 - 5mins] & <b>Stage 2</b> [10 - 60mins]
 			<br>
-			The moment we dozed off, our body will rapidly try to transit to Stage 2 to further slow down our brain and body activity. As it is the early stages, it is much easier to be awoken by any disturbance too.
+			The moment we doze off, our body will rapidly try to transit to Stage 2 to further slow down our brain and body activity. As it is the early stages, it is much easier to be awoken by any disturbance too.
 
 			<br><br>
 
 			<b>Stage 3</b> [20 - 40mins]
 			<br>
-			This is the deepest part of non-REM sleep where our whole body shows significantly slower activity that is different from or waking mind. Such deep sleep is important for our body to recuperate so we can achieve effective thinking and memory.
+			This is the deepest part of non-REM sleep where our whole body shows significantly slower activity that is different from our waking mind. Such deep sleep is important for our body to recuperate so we can achieve effective thinking and memory.
 		</p>
 	</div>
 </body>
