--- a/articleAssets/selfhelp/understandingsleep/page8.html
+++ b/articleAssets/selfhelp/understandingsleep/page8.html
@@ -36,7 +36,7 @@
 		<p>
 			<b>Stage 4</b> [10 - 60mins]
 			<br>
-			As the only REM stage of sleep, this is when intense dreaming takes place. At this time, our brain activity increases markedly, while most of our body experience temporary paralysis (i.e., not being able to move), except for our eyes and breathing muscles. It is normal for a greater percentage of our sleep duration to be in REM sleep, especially in the later half of the sleep cycles.
+			As the only REM stage of sleep, this is when intense dreaming takes place. At this time, our brain activity increases markedly, while most of our body experiences temporary paralysis (i.e., not being able to move), except for our eyes and breathing muscles. It is normal for a greater percentage of our sleep duration to be in REM sleep, especially in the later half of the sleep cycles.
 		</p>
 	</div>
 </body>
