--- a/articleAssets/selfhelp/whatispsychotherapy/page1.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page1.html
@@ -33,9 +33,9 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
     <img style="width: 50%; object-fit: contain; align-self: center" src="../../assets/articleAssets/selfhelp/selfhelp.png">
 
-    <p>Psychotherapy, also known as “talking therapy”, is one of the treatment options that can help us understand how we feel, think and behave in distressing situation, in turn learn how to develop better coping skills to improve our life.</p>
+    <p>Psychotherapy, also known as “talking therapy”, is one of the treatment options that can help us understand how we feel, think, and behave in distressing situations and, in turn, learn how to develop better-coping skills to improve our lives.</p>
 
-    <p>There are many types of psychotherapy that can be used to treat various mental health conditions, depending on the problem, our abilities and preference. As it is a collaborative treatment mode, we would have to share personal and sensitive information so we can accurately define our difficulties. As such, it is important to understand how psychotherapy works and find the right type to suit our needs.</p>
+    <p>Many types of psychotherapy can be used to treat various mental health conditions, depending on the problem, our abilities, and preferences. As it is a collaborative treatment mode, we would have to share personal and sensitive information so we can accurately define our difficulties. As such, it is important to understand how psychotherapy works and find the right type to suit our needs.</p>
   </div>
 </body>
 </html>
