--- a/articleAssets/selfhelp/whatispsychotherapy/page3.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page3.html
@@ -53,7 +53,7 @@
 			
 			<div style="display: flex; flex-direction: row; gap: 16px;">
 				<img style="width: 5%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/selfhelp/whatispsychotherapy/page3-image1.png">
-				Our action or words are hurting ourselves or others
+				Our actions or words are hurting ourselves or others
 			</div>
 
 			<div style="display: flex; flex-direction: row; gap: 16px;">
