--- a/articleAssets/selfhelp/whatispsychotherapy/page4.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page4.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<p><b>Is therapy for life?</b></p>
 
-		<p>No, it really depends on the severity of the problem and progress made during the session. Remember, therapy is always collaborative, so be an active participant and work with your therapist.</p>
+		<p>No, it really depends on the severity of the problem and the progress made during the session. Remember, therapy is always collaborative, so be an active participant and work with your therapist.</p>
 
 		<p><b>How long is a therapy session?</b></p>
 
