--- a/articleAssets/selfhelp/whatispsychotherapy/page5.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page5.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<p><b>Which type of therapy should it be?</b></p>
 
-		<p>This depends on the needs and desired outcome. Far beyond the media portrayal of a person lying on a couch during therapy,  therapy session can be individual, couple, family or even in group settings. There are also many techniques and approaches  a mental health practitioner can utilise.  Each comes with its pros and cons.</p>
+		<p>This depends on the needs and desired outcome. Far beyond the media portrayal of a person lying on a couch during therapy,  therapy sessions can be individual, couple, family, or even in group settings. There are also many techniques and approaches a mental health practitioner can utilise.  Each comes with its pros and cons.</p>
 
 		<p>Studies have found that a person took an average of 2.5 therapists to find a good match. So be patient.</p>
 
