--- a/articleAssets/selfhelp/whatispsychotherapy/page6.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page6.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<p><b>What usually happens in the session?</b></p>
 
-		<p>First few sessions are typically to get to know you, your past experiences and struggles. This is so the therapist can learn about your personal life journey thus far and how that could have shaped you as a person or contribute to your current challenge. This is also the time for you to clarify your doubts on how the session will be like with your therapist.</p>
+		<p>The first few sessions are typically to get to know you, your past experiences, and your struggles. This is so the therapist can learn about your personal life journey thus far and how that could have shaped you as a person or contributed to your current challenge. This is also the time for you to clarify your doubts about what the session will be like with your therapist.</p>
 
 		<p>A therapy / counselling goal is then discussed and set to guide subsequent sessions. It is important that the goals are clear and measurable to track effectiveness of the session.</p>
 
