--- a/articleAssets/selfhelp/whatispsychotherapy/page9.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page9.html
@@ -32,7 +32,7 @@
 <body>
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<p>
-			<b>Still lost on how to start? Try asking yourself these questions and share with your mental health provider to narrow down the options:</b>
+			<b>Still lost on how to start? Try asking yourself these questions and share them with your mental health provider to narrow down the options:</b>
 		</p>
 
 		<div style="display: flex; flex-direction: column;">
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 
-		<p><b>Remember there is no one way of help and the first step is to seek professional help as soon you can! :) Given the right treatment, these problems can be managed to help you go through your life smoothly and improve your overall mental well-being/ functioning in the future!</b></p>
+		<p><b>Remember there is no one way of help and the first step is to seek professional help as soon as you can! :) Given the right treatment, these problems can be managed to help you go through your life smoothly and improve your overall mental well-being/ functioning in the future!</b></p>
 	</div>
 </body>
 </html>
