--- a/articleAssets/selfhelp/understandingsleep/page1.html
+++ b/articleAssets/selfhelp/understandingsleep/page1.html
@@ -34,7 +34,7 @@
     <img style="width: 50%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/selfhelp/selfhelp.png">
 
     <p>
-      Good physical and mental health comes with having quality sleep which involves getting sufficient uninterrupted sleep on a regular basis. Without healthy sleep, it can be challenging to manage everyday tasks such as paying attention in school, work or meeting. You may also be more likely to get sick or forgetful. Understanding how sleep works, which is a very complex process, will help you figure out how to improve your sleep quality.
+      Good physical and mental health comes with having quality sleep which involves getting sufficient uninterrupted sleep on a regular basis. Without healthy sleep, it can be challenging to manage everyday tasks such as paying attention in school, work or meetings. You may also be more likely to get sick or forgetful. Understanding how sleep works, which is a very complex process, will help you figure out your sleep pattern, the barriers and facilitators, and in turn how to improve your sleep quality. 
     </p>
   </div>
 </body>
