--- a/articleAssets/selfhelp/understandingsleep/page5.html
+++ b/articleAssets/selfhelp/understandingsleep/page5.html
@@ -36,7 +36,7 @@
 		<p>
 			<b>Circadian Rhythm (“Body Clock”)</b>
 			<br>
-			Based typically on a 24 hours period, it is key enabler to how we function on a daily basis, including sleep. Light exposure is the known biggest influence on the circadian rhythms, for which we are wakeful in the day but sleepy in the night.
+			Based typically on a 24 hours period, it is a key enabler to how we function daily, including sleep. Light exposure is the known biggest influence on the circadian rhythms, for which we are wakeful in the day but sleepy in the night.
 			<br><br>
 			The exact amount of necessary sleep can vary across person, depending on your life phase. On average, an adult should get at least 7 hours of sleep each night to avoid incurring sleep debt. As important as sleep quantity is, sleep quality (sleeping without interruptions) is also key to achieving healthy and satisfying sleep!
 		</p>
