--- a/articleAssets/selfhelp/whatispsychotherapy/page2.html
+++ b/articleAssets/selfhelp/whatispsychotherapy/page2.html
@@ -35,7 +35,7 @@
 
 		<p>Psychotherapy, or talk therapy, is a form of intervention that can help us understand our thoughts, feeling and behaviour towards a certain situation/person so we are able to change that distress to better cope with the challenges, improve our life and build resilience.</p>
 
-		<p>Typically, the process will be guided by a trained mental health provider. Various psychotherapy techniques and strategies can be used, depending on the problem faced, desired outcome, our ability and preference. Regardless of the chosen psychotherapy, a therapeutic relationship must be built so we can communicate openly and safely about our problems to explore solution.</p>
+		<p>Typically, the process will be guided by a trained mental health provider. Various psychotherapy techniques and strategies can be used, depending on the problem faced, the desired outcome, our ability, and preferences. Regardless of the chosen psychotherapy, a therapeutic relationship must be built so we can communicate openly and safely about our problems to explore solutions.</p>
 
 		<p>However, it can still be very scary to open up to a stranger, and many may be reluctant to try it out. Finding a trusted professional and learning about how it works can help us make the most out of it.</p>
 	</div>
